# MemoryPolicy

./: READMD.md  README.md  constants.py  pyproject.toml
examples/aloha_sim/: __init__.py  argparser.py  data_config.py
examples/aloha_sim/envs/: constants.py  ee_sim_env.py  scripted_policy.py  sim_env.py  utils.py  visualize_episodes.py
examples/aloha_sim/infer/: __init__.py
examples/aloha_sim/train/: __init__.py
examples/real_world/: __init__.py  argparser.py  data_config.py
examples/real_world/infer/: __init__.py
examples/real_world/train/: __init__.py
src/memory_policy/configs/: __init__.py
src/memory_policy/configs/arguments/: __init__.py  architectures.py  dataset.py  general.py  inference.py  training.py
src/memory_policy/modules/: __init__.py  resnet.py  siglip.py
src/memory_policy/policy/wm/: __init__.py
src/memory_policy/utils/: __init__.py
src/memory_policy/utils/data_utils/: data_loader.py  misc.py
src/memory_policy/utils/infer_utils/: __init__.py  action.py  interbotix.py  misc.py
src/memory_policy/utils/init_utils/: __init__.py
src/memory_policy/utils/train_utils/: __init__.py
